--- a/README
+++ b/README
@@ -1,1 +1,7 @@
-ToDo
+# STOCK MANAGEMENT SYSTEM
+
+### Description
+Programming exercise with Play Framework and Scala.
+
+### Documentation
+TO run the project: ./activator run
